Update file structure

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Piano Cat</title>
     <link rel="stylesheet" href="styles.css">
     <script src=""></script>
-    <script src="../node_modules/webmidi/webmidi.min.js"></script>
+    <script src="./node_modules/webmidi/webmidi.min.js"></script>
 </head>
 
 <body>
     <div>
         <div id="cat">
-            <img src="../src/imgs/catUp.png">
+            <img src="./src/imgs/catUp.png">
         </div>
         <div id="right">
         </div>
@@ -21,7 +21,7 @@
         </div>
         <h1 id="text">test</h1>
     </div>
-    <script type="text/javascript" src="../src/index.js"></script>
+    <script type="text/javascript" src="./src/index.js"></script>
 </body>
 
 </html>
